cleans up the way that the golr tables and other tabs on the monarch-specific pages are laid out. Tabs are all consistent now in terms of margin. Horizontal scrolling caused by the table has been fixed.

--- a/css/monarch-common.css
+++ b/css/monarch-common.css
@@ -59,7 +59,7 @@ p.bigfont {
     margin: -15px -30px 0 -30px;
 }
 
- 
+
 /* Navbar */
 /* These are navbar styles that depend heavily on media queries to determine the
  * width of the user's browser window. Make sure that you are adding styles to the
@@ -148,7 +148,7 @@ p.bigfont {
 }
 
 
-@media (max-width: 900px) {
+@media (max-width: 925px) {
     #search {
         margin-left: 0 !important;
         margin-right: 5px;
@@ -540,7 +540,7 @@ h1.downloadline {
 }
 
 .bs3filter .panel .panel-heading .panel-title {
-    font-size: 17px !important; 
+    font-size: 17px !important;
 }
 
 .bs3filter .panel .panel-heading .panel-title a {
@@ -550,6 +550,72 @@ h1.downloadline {
 .bs3filter .panel .panel-body {
     margin: 0;
     padding: 3px;
+}
+
+
+div.bs3filter {
+}
+
+div.bs3pager {
+    padding: 0;
+    margin: 0;
+}
+
+div.bs3table {
+    margin: 0;
+    padding: 0;
+}
+
+.monarch-container #results-area .row {
+  padding:0;
+  margin: 0;
+}
+
+.monarch-container #results-area .results-area-filter {
+  padding:0;
+  padding:0 5px 0 0;
+  margin: 0;
+}
+
+.monarch-container #results-area .results-area-pager {
+  padding:0;
+  margin:0;
+  padding:5px;
+}
+
+.monarch-container #results-area {
+  word-wrap:break-word;
+  padding: 0;
+  margin: 0;
+}
+
+.monarch-container div#r3 {
+  word-wrap:break-word;
+  margin: 0;
+  padding: 0;
+}
+
+.monarch-container div.category #results-area {
+  word-wrap:break-word;
+  padding: 0;
+  margin: 0;
+  height: 100%;
+}
+
+.monarch-container #results-area table.table-condensed {
+  padding:0;
+  margin: 0;
+  box-sizing: content-box;
+  table-layout:fixed;
+}
+.monarch-container #results-area table.table-condensed thead>tr {
+  padding:0;
+  margin: 0;
+  font-size:0.95em;
+}
+.monarch-container #results-area table.table-condensed tbody>tr {
+  padding:0;
+  margin: 0;
 }
 
 
@@ -569,32 +635,64 @@ h1.downloadline {
 
 #results-area .bs3filter .panel.panel-default .panel-body[id*="filter_ui_element_"] {
     padding: 5%;
-    width: 110%;
     font-weight: 500;
     text-align: center;
 }
 
 #results-area .bs3filter .panel.panel-default .panel-body[id*="filter_ui_element_"] > table {
     margin: -5%;
+    min-width:110%;
     font-weight: 400;
-    text-align: left;
+    text-align: left !important;
 }
+
+#results-area .bs3filter .panel.panel-default .panel-body[id*="filter_ui_element_"] > table > thead > tr > th:first-child {
+    width:10%;
+}
+
+#results-area .bs3filter .panel.panel-default .panel-body[id*="filter_ui_element_"] > table > thead > tr > th:nth-child(2) {
+    width:75%;
+}
+
 
 #results-area .bs3filter .panel.panel-default .panel-body[id*="subject_taxon_label"] {
     padding: 5%;
     margin: 0;
-    width: 100%;
     font-weight: 500;
     text-align: center;
 }
 
 #results-area .bs3filter .panel.panel-default .panel-body[id*="subject_taxon_label"] > table {
     margin: -5%;
-    min-width: 110% !important;
-    width: 110% !important;
+    min-width:110%;
     font-weight: 400;
     text-align: left;
 }
+
+#results-area .bs3filter .panel.panel-default .panel-body[id*="subject_taxon_label"] > table > tbody > tr > td:first-child {
+    width:60%;
+}
+
+#results-area .bs3filter .panel.panel-default .panel-body[id*="subject_taxon_label"] > table > tbody > tr > td:nth-child(2) {
+    width:15%;
+}
+
+#results-area .bs3pager > div[id*="gen_id-bbop-html"] > div[id*="gen_id-bbop-html"]:first-child,
+#results-area .bs3pager-bottom > div[id*="gen_id-bbop-html"] > div[id*="gen_id-bbop-html"]:first-child {
+    width: 360px;
+    margin: 0;
+    padding: 0 20px 3px 10px;
+    font-weight: 500;
+}
+
+
+#results-area .bs3pager > div[id*="gen_id-bbop-html"] > div[id*="gen_id-bbop-html"]:nth-child(2),
+#results-area .bs3pager-bottom > div[id*="gen_id-bbop-html"] > div[id*="gen_id-bbop-html"]:nth-child(2) {
+    width: 360px;
+    padding: 10px 0 5px 10px;
+    font-weight: 500;
+}
+
 
 /* End of Filter Hack */
 
